[package]
name = "hellvents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
config = "0.14.0"
futures-util = "0.3.30"
log = "0.4.22"
rustls = { version = "0.23.11", default-features = false, features = ["ring"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.10.0", features = ["v4"] }
wise_api = { git = "https://github.com/Lelleck/wise.git", branch = "dev" }
